2012-06-12  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixRFont.c (Tk_DrawChars, TkUnixSetXftClipRegion): Add some
	* generic/ttk/ttkEntry.c (EntryDisplay): special magic to make the
	* generic/ttk/ttkLabel.c (TextDraw): text clipping work right with the
	Xft-based renderer (which doesn't use the standard Tk GC except to
	supply the color).

2012-06-11  Donal K. Fellows  <dkf@users.sf.net>

	* generic/ttk/ttkLabel.c (TextDraw): [Bug 3294450]: Get the clipping
	* generic/ttk/ttkEntry.c (EntryDisplay): of text in Ttk various text
	elements (e.g., buttons, entries, etc.) correct. Stops a whole range
	of visual problems, including loss of the second and subsequent lines
	of a label when the first line doesn't entirely fit, and failing to
	draw the last character of an entry at all if it doesn't all exactly
	fit in the space available (a problem I've noticed in tkchat, and been
	very frustrated with).

2012-06-10  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/*.tcl:      [Bug 3534137]: $tcl_platform(platform) !=
	[tk windowingsystem]

2012-06-08  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMain.c:   Implement TkCygwinMainEx for loading
	* generic/tkWindow.c: Cygwin's Tk_MainEx from the Tk dll.

2012-06-07  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls:   Change XChangeWindowAttributes signature and
	* generic/tkIntXlibDeclsDecls.h: many others to match Xorg, needed for Cygwin.

2012-06-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/Makefile.in:      [Bug 3532186] pkgIndex.tcl file complexity
	* win/Makefile.in:

2012-06-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.decls:   Change XSetDashes signature and many others
	* generic/tkIntDecls.h:  to match Xorg, needed for Cygwin.
	* generic/tkIntXlibDeclsDecls.h
	* win/Makefile.in:       Generate same pkgIndex.tcl file for win32 and
	* unix/Makefile.in:      cygwin, one that is equally useable for both.

2012-05-30  Jan Nijtmans  <nijtmans@users.sf.net>
